# callpkg

./: CMakeLists.txt  README.md  main.cpp
Commands/Exec/: exec.cpp  exec.h
Commands/GenericCommand/: genericcommand.cpp  genericcommand.h
Commands/Install/: install.cpp  install.h
Commands/Logging/: logging.h
Commands/Validate/: validate.cpp  validate.h
src/utils/FileManager/: filemanager.cpp  filemanager.h
src/utils/StringTools/: stringtools.h
src/utils/curl_request/: requests.cpp  requests.h
utils/FileManager/: filemanager.cpp  filemanager.h
utils/Linux/: linux.cpp  linux.h
utils/PackagesManager/: packagesmanager.cpp  packagesmanager.h
utils/PathManager/: pathmanager.cpp  pathmanager.h
utils/StringTools/: stringtools.cpp  stringtools.h  stringtools.inl
utils/curl_request/: requests.cpp  requests.h
